# RepoExplorer

./: .gitignore  .gitmodules  DependencyRoots.hs  LICENSE  README.md  RepoExplorer.cabal  RepoList.hs  build-deb.sh  cabal.project  default.nix  flake.nix
.github/workflows/: deb.yml  haskell.yml  nix-build.yml  release.yml
debian/: changelog  control  copyright  repoexplorer.install  rules
