cabal-version: 3.8
name: RepoExplorer
version: 0.5.0.0
license: MIT
license-file: LICENSE
copyright: 2010-2025
author: Neil Mayhew
maintainer: Neil Mayhew <neil_mayhew@users.sourceforge.net>
category: Debian
synopsis: A set of utilities for exploring Debian package repositories
description:
  The following utilities are available:
  .
  * RepoList
  * DependencyRoots
  .
  Further utilities will be added later.

flag werror
  description: Use-Werror
  default: False

executable RepoList
  main-is: RepoList.hs
  build-depends:
    base,
    bytestring >=0.9.1.7 && <0.13,
    cmdargs,
    cryptohash-md5,
    curl,
    debian,
    directory >=1.0.1.1 && <1.4,
    download-curl,
    filepath >=1.1.0.4 && <1.6,
    parsec >=2.1.0.1 && <3.2,
    unix >=2.4.0.2 && <2.9,
    zlib >=0.5.2.0 && <0.8,

  default-language: Haskell2010
  other-extensions: DeriveDataTypeable
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-name-shadowing
    -threaded

  if flag(werror)
    ghc-options: -Werror

executable DependencyRoots
  main-is: DependencyRoots.hs
  build-depends:
    base,
    bytestring >=0.9.1.7 && <0.13,
    cmdargs,
    containers >=0.4 && <0.8,
    debian,
    fgl >=5.4 && <5.9,

  default-language: Haskell2010
  other-extensions: DeriveDataTypeable
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-name-shadowing
    -threaded

  if flag(werror)
    ghc-options: -Werror
